--- a/AsyncClientMAUI/AppShell.xaml
+++ b/AsyncClientMAUI/AppShell.xaml
@@ -8,7 +8,7 @@
     Title="AsyncClientMAUI">
 
     <ShellContent
-        Title="Home"
+        Title="Client"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
 
